--- a/Task-10_Browser-game/package.json
+++ b/Task-10_Browser-game/package.json
@@ -59,5 +59,8 @@
         "lint:js": "eslint --ext .js src/js/",
         "stats": "webpack --config configuration/webpack.prod.config.js --mode=production --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json"
     },
-    "target": "web"
+    "target": "web",
+    "dependencies": {
+        "ts-loader": "^9.2.8"
+    }
 }
