--- a/Task-10_Browser-game/package.json
+++ b/Task-10_Browser-game/package.json
@@ -7,6 +7,7 @@
     "devDependencies": {
         "@babel/core": "^7.16.0",
         "@babel/preset-env": "^7.16.0",
+        "@babel/preset-typescript": "^7.16.7",
         "autoprefixer": "^10.4.0",
         "babel-loader": "^8.2.3",
         "clean-webpack-plugin": "^4.0.0",
