--- a/Task-10_Browser-game/.babelrc
+++ b/Task-10_Browser-game/.babelrc
@@ -4,5 +4,15 @@
         [
             "@babel/preset-env"
         ]
+    ],
+    "plugins": [
+        [
+            "@babel/plugin-transform-react-jsx",
+            {
+                "throwIfNamespace": false,
+                "runtime": "automatic",
+                "importSource": "./render"
+            }
+        ]
     ]
 }
