Upd render congif

--- a/Task-10_Browser-game/.babelrc
+++ b/Task-10_Browser-game/.babelrc
@@ -11,7 +11,7 @@
             {
                 "throwIfNamespace": false,
                 "runtime": "automatic",
-                "importSource": "./render"
+                "importSource": "renderLib"
             }
         ]
     ]
