--- a/Task-10_Browser-game/package.json
+++ b/Task-10_Browser-game/package.json
@@ -59,7 +59,7 @@
         "dev": "webpack serve --config configuration/webpack.dev.config.js --mode=development",
         "production": "webpack --config configuration/webpack.prod.config.js --mode=production",
         "lint:sass": "sass-lint -v -q",
-        "lint:js": "eslint --ext .js src/js/",
+        "lint:ts": "eslint --ext .ts src/ts/",
         "stats": "webpack --config configuration/webpack.prod.config.js --mode=production --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json"
     },
     "target": "web"
